gl33-master/src/test/deca/context/valid/others/operations_sur_flottants.deca
// Valid test
// Opérations sur les flottants

{
    float x = 1.1;
    float y = 2.2;
    float z = 3.3;

    x = y + z;
    x = y - z;
    x = y * z;
    x = y / z;

    y = x + z;
    y = x - z;
    y = x * z;
    y = x / z;

    z = x + y;
    z = x - y;
    z = x * y;
    z = x / y;
}
